--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,11 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_dotenv: ^5.0.2
   supabase_flutter: ^1.2.2
-  intl: ^0.18.0
+  provider: ^6.0.5
+  # intl: ^0.18.0, downgraded to 0.17.0 as following version of table_calendar
+  # won't work.
+  intl: ^0.17.0
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
