--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  integration_test:
+    sdk: flutter
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -76,6 +77,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - .env
+    - .env.test
     - assets/images/
     - assets/icons/  
 
